changed title of contact.html page

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
 
-    <title> Contact </title>
+    <title> Contact Stipica </title>
 </head>
 
 <body>
