--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
@@ -42,7 +43,7 @@
     <main>
         <div class="profile">
 
-            <img src="img/placeholder-profile.png" class="profilepic" alt="profile picture">
+            <img src="img/profil.png" class="profilepic" alt="profile picture">
             <h1>Hello World !</h1>
             <h2>My name is Stipica Viskovic</h2>
             <h2>I am <span class="span__web"> &lt; web &gt;" </web></span> developer from Essen</h2>
@@ -53,11 +54,11 @@
     <footer class="page-footer">
         <p>Find me on:</p>
         <div class="social-media">
-            <a href="https://twitter.com" target="_blank"> <img src="./img/icons8-twitter.svg" alt=""> </a>
-            <a href="https://github.com.com" target="_blank"> <img src="./img/placeholder-icon.png" alt=""> </a>
-            <a href="https://linkedin.com" target="_blank"> <img src="./img/placeholder-icon.png" alt=""> </a>
+            <a href="https://twitter.com" class="fa fa-twitter"></a>
+            <a href="https://github.com/stivi00" class="fa fa-github"></a>
+            <a href="https://linkedin.com" class="fa fa-linkedin"></a>
         </div>
-
+        
     </footer>
     <script src="js/tota11y.min.js"></script>
 
