logo is now link to homepage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
 <body>
     <header class="page-header">
-        <img src="./img/logo.png" width="200" height="150" alt="logo icon"  class="page-header__item">
+        <a href="index.html" class="page-header__item">
+            <img src="./img/logo.png" width="200" height="150" alt="logo icon"  >
+        </a>
         
         <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
@@ -58,7 +60,7 @@
             <a href="https://github.com/stivi00" class="fa fa-github"></a>
             <a href="https://linkedin.com" class="fa fa-linkedin"></a>
         </div>
-        
+
     </footer>
     <script src="js/tota11y.min.js"></script>
 
