--- a/about.html
+++ b/about.html
@@ -20,7 +20,9 @@
 
 <body>
     <header class="page-header">
-        <img src="./img/logo.png" width="200" height="150" alt="logo icon"  class="page-header__item">
+        <a href="index.html" class="page-header__item">
+            <img src="./img/logo.png" width="200" height="150" alt="logo icon"  >
+        </a>
         
         <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
