--- a/work.html
+++ b/work.html
@@ -20,8 +20,10 @@
 
 <body>
     <header class="page-header">
-        <img src="./img/logo.png" width="200" height="150" alt="logo icon"  class="page-header__item">
-
+        <a href="index.html" class="page-header__item">
+            <img src="./img/logo.png" width="200" height="150" alt="logo icon"  >
+        </a>
+        
         <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
