accessibility to social media links added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="index.html" class="page-header__item">
             <img src="./img/logo.png" width="200" height="150" alt="logo icon"  >
         </a>
-        
+
         <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
@@ -56,9 +56,9 @@
     <footer class="page-footer">
         <p>Find me on:</p>
         <div class="social-media">
-            <a href="https://twitter.com" class="fa fa-twitter"></a>
-            <a href="https://github.com/stivi00" class="fa fa-github"></a>
-            <a href="https://linkedin.com" class="fa fa-linkedin"></a>
+            <a href="https://twitter.com" target="_blank" class="fa fa-twitter" role="link" aria-label="twitter"></a>
+            <a href="https://github.com/stivi00" target="_blank" class="fa fa-github" role="link" aria-label="github" ></a>
+            <a href="https://linkedin.com" target="_blank" class="fa fa-linkedin" role="link" aria-label="linkedin" ></a>
         </div>
 
     </footer>
