removed role="link" from a elements

--- a/about.html
+++ b/about.html
@@ -656,9 +656,9 @@
     <footer class="page-footer">
         <p>Find me on:</p>
         <div class="social-media">
-            <a href="https://twitter.com" target="_blank" class="fa fa-twitter" role="link" aria-label="twitter"></a>
-            <a href="https://github.com/stivi00" target="_blank" class="fa fa-github" role="link" aria-label="github" ></a>
-            <a href="https://linkedin.com" target="_blank" class="fa fa-linkedin" role="link" aria-label="linkedin" ></a>
+            <a href="https://twitter.com" target="_blank" class="fa fa-twitter" aria-label="twitter"></a>
+            <a href="https://github.com/stivi00" target="_blank" class="fa fa-github" aria-label="github" ></a>
+            <a href="https://linkedin.com" target="_blank" class="fa fa-linkedin" aria-label="linkedin" ></a>
         </div>
 
     </footer>
