--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img src="img/profil.png" class="profilepic" alt="profile picture">
             <h1>Hello World !</h1>
             <h2>My name is Stipica Viskovic</h2>
-            <h2>I am <span class="span__web"> &lt; web &gt;" </span> developer from Essen</h2>
+            <h2>I am <span class="span__web"> &lt; web &gt;</span> developer from Essen</h2>
 
         </div>
     </main>
