--- a/contact.html
+++ b/contact.html
@@ -1,83 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+            integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" type="text/css" href="css/styles.css" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+        <title>Contact Stipica</title>
+    </head>
 
+    <body>
+        <header class="page-header">
+            <div class="page-header__item">
+                <h1>Stipica Viskovic</h1>
+            </div>
 
-    <title> Contact Stipica </title>
-</head>
+            <nav class="main-navigation page-header__item">
+                <ul role="menubar" class="navigation-list">
+                    <li role="presentation">
+                        <a href="index.html" role="menuitem">HOME</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="about.html" role="menuitem">ABOUT ME</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="contact.html" role="menuitem">CONTACT</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="work.html" role="menuitem">WORK</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section class="contact">
+            <h1>Contact me</h1>
+            <div class="contact__details">
+                Stipica Viskovic <br />
+                Schellstr. 25 <br />
+                45141 Essen <br /><br />
 
-<body>
-    <header class="page-header">
-        <a href="index.html" class="page-header__item">
-            <img src="./img/logo.png" width="200" height="150" alt="logo icon"  >
-        </a>
-        
-        <nav class="main-navigation page-header__item">
-            <ul role="menubar" class="navigation-list">
-                <li role="presentation">
-                    <a href="index.html" role="menuitem">HOME</a>
-                </li>
-                <li role="presentation">
-                    <a href="about.html" role="menuitem">ABOUT ME</a>
-                </li>
-                <li role="presentation">
-                    <a href="contact.html" role="menuitem">CONTACT</a>
-                </li>
-                <li role="presentation">
-                    <a href="work.html" role="menuitem">WORK</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <section class="contact">
-        <h1>Contact me</h1>
-        <div class="contact__details">
-            Stipica Viskovic <br>
-            Schellstr. 25 <br>
-            45141 Essen <br><br>
+                <!-- Perfect time to use comment. Contact data is all made up :)  -->
 
-            <!-- Perfect time to use comment. Contact data is all made up :)  -->
+                Tel: <a href="tel:+4917662777131">+4917662866181</a> <br />
+                Email: <a href="mailto:stivis@gmail.com">stivis@gmail.com</a>
+                <br />
+                Skype: <a href="skype:stivis.stivis">stivis.stivis</a> <br />
+            </div>
 
-            Tel: <a href="tel:+4917662777131">+4917662866181</a> <br>
-            Email: <a href="mailto:stivis@gmail.com">stivis@gmail.com</a> <br>
-            Skype: <a href="skype:stivis.stivis">stivis.stivis</a> <br>
-        </div>
+            <br /><br /><br />
+            <form
+                class="contact__form"
+                action=""
+                method="post"
+                id="contact-form"
+            >
+                <label class="standard-label" for="email">Email: </label> <br />
+                <input type="email" id="email" required /> <br /><br />
+                <label class="standard-label" for="textarea">Message: </label>
+                <br />
+                <textarea
+                    id="textarea"
+                    required
+                    maxlength="240"
+                    rows="5"
+                    cols="40"
+                ></textarea>
+                <br />
+                <br />
+                <input
+                    class="button__main"
+                    type="submit"
+                    value="Send message"
+                />
+            </form>
+        </section>
 
-
-        <br><br><br>
-        <form class="contact__form" action="" method="post" id="contact-form">
-            <label class="standard-label" for="email">Email: </label> <br>
-            <input type="email" id="email" required> <br><br>
-            <label class="standard-label" for="textarea">Message: </label> <br>
-            <textarea id="textarea" required maxlength="240" rows="5" cols="40" ></textarea> <br> <br>
-            <input class="button__main" type="submit" value="Send message">
-        </form>
-    </section>
-
-    <footer class="page-footer">
-        <p>Find me on:</p>
-        <div class="social-media">
-            <a href="https://twitter.com" target="_blank" class="fa fa-twitter" aria-label="twitter"></a>
-            <a href="https://github.com/stivi00" target="_blank" class="fa fa-github" aria-label="github" ></a>
-            <a href="https://linkedin.com" target="_blank" class="fa fa-linkedin" aria-label="linkedin" ></a>
-        </div>
-
-    </footer>
-    <script src="js/tota11y.min.js"></script>
-
-</body>
-
+        <footer class="page-footer">
+            <p>Find me on:</p>
+            <div class="social-media">
+                <a
+                    href="https://twitter.com"
+                    target="_blank"
+                    class="fa fa-twitter"
+                    aria-label="twitter"
+                ></a>
+                <a
+                    href="https://github.com/stivi00"
+                    target="_blank"
+                    class="fa fa-github"
+                    aria-label="github"
+                ></a>
+                <a
+                    href="https://linkedin.com"
+                    target="_blank"
+                    class="fa fa-linkedin"
+                    aria-label="linkedin"
+                ></a>
+            </div>
+        </footer>
+        <script src="js/tota11y.min.js"></script>
+    </body>
 </html>
