--- a/index.html
+++ b/index.html
@@ -1,69 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+            integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" type="text/css" href="css/styles.css" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+        <title>Homepage</title>
+    </head>
 
-    <title>Homepage</title>
-</head>
+    <body>
+        <header class="page-header">
+            <div class="page-header__item">
+                <h1>Stipica Viskovic</h1>
+            </div>
 
-<body>
-    <header class="page-header">
-        <a href="index.html" class="page-header__item">
-            <img src="./img/logo.png" width="200" height="150" alt="logo icon"  >
-        </a>
+            <nav class="main-navigation page-header__item">
+                <ul role="menubar" class="navigation-list">
+                    <li role="presentation">
+                        <a href="index.html" role="menuitem">HOME</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="about.html" role="menuitem">ABOUT ME</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="contact.html" role="menuitem">CONTACT</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="work.html" role="menuitem">WORK</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
 
-        <nav class="main-navigation page-header__item">
-            <ul role="menubar" class="navigation-list">
-                <li role="presentation">
-                    <a href="index.html" role="menuitem">HOME</a>
-                </li>
-                <li role="presentation">
-                    <a href="about.html" role="menuitem">ABOUT ME</a>
-                </li>
-                <li role="presentation">
-                    <a href="contact.html" role="menuitem">CONTACT</a>
-                </li>
-                <li role="presentation">
-                    <a href="work.html" role="menuitem">WORK</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+        <main>
+            <div class="profile">
+                <img
+                    src="img/profil.png"
+                    class="profilepic"
+                    alt="profile picture"
+                />
+                <h1>Hello World !</h1>
+                <h2>My name is Stipica Viskovic</h2>
+                <h2>
+                    I am <span class="span__web"> &lt; web &gt;</span> developer
+                    from Essen
+                </h2>
+            </div>
+        </main>
 
-    <main>
-        <div class="profile">
-
-            <img src="img/profil.png" class="profilepic" alt="profile picture">
-            <h1>Hello World !</h1>
-            <h2>My name is Stipica Viskovic</h2>
-            <h2>I am <span class="span__web"> &lt; web &gt;</span> developer from Essen</h2>
-
-        </div>
-    </main>
-
-    <footer class="page-footer">
-        <p>Find me on:</p>
-        <div class="social-media">
-            <a href="https://twitter.com" target="_blank" class="fa fa-twitter" aria-label="twitter"></a>
-            <a href="https://github.com/stivi00" target="_blank" class="fa fa-github" aria-label="github" ></a>
-            <a href="https://linkedin.com" target="_blank" class="fa fa-linkedin" aria-label="linkedin" ></a>
-        </div>
-
-    </footer>
-    <script src="js/tota11y.min.js"></script>
-
-</body>
-
+        <footer class="page-footer">
+            <p>Find me on:</p>
+            <div class="social-media">
+                <a
+                    href="https://twitter.com"
+                    target="_blank"
+                    class="fa fa-twitter"
+                    aria-label="twitter"
+                ></a>
+                <a
+                    href="https://github.com/stivi00"
+                    target="_blank"
+                    class="fa fa-github"
+                    aria-label="github"
+                ></a>
+                <a
+                    href="https://linkedin.com"
+                    target="_blank"
+                    class="fa fa-linkedin"
+                    aria-label="linkedin"
+                ></a>
+            </div>
+        </footer>
+        <script src="js/tota11y.min.js"></script>
+    </body>
 </html>
