styling theme added, navbar tilt problem

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <img src="./img/logo.png" width="200" height="150" alt="logo icon"  >
         </a> -->
             <div class="page-header__item">
-                <h1>Stipica Viskovic</h1>
+                <h2 class="page-header__logo">Stipica Viskovic</h1>
             </div>
 
             <nav class="main-navigation page-header__item">
@@ -54,7 +54,7 @@
             </nav>
         </header>
         <section class="about">
-            <h1>About me</h1>
+            <h1 class="section-title">About me</h1>
             <div class="about__section">
                 <h3>This page is about myself. That's what I enjoy doing:</h3>
                 <br />
