--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,11 @@
 
     <body>
         <header class="page-header">
+            <!-- <a href="index.html" class="page-header__item">
+            <img src="./img/logo.png" width="200" height="150" alt="logo icon"  >
+        </a> -->
             <div class="page-header__item">
-                <h1>Stipica Viskovic</h1>
+                <h2 class="page-header__logo">Stipica Viskovic</h1>
             </div>
 
             <nav class="main-navigation page-header__item">
@@ -51,7 +54,7 @@
             </nav>
         </header>
         <section class="contact">
-            <h1>Contact me</h1>
+            <h1 class="section-title">Contact me</h1>
             <div class="contact__details">
                 Stipica Viskovic <br />
                 Schellstr. 25 <br />
