--- a/work.html
+++ b/work.html
@@ -29,8 +29,11 @@
 
     <body>
         <header class="page-header">
+            <!-- <a href="index.html" class="page-header__item">
+            <img src="./img/logo.png" width="200" height="150" alt="logo icon"  >
+        </a> -->
             <div class="page-header__item">
-                <h1>Stipica Viskovic</h1>
+                <h2 class="page-header__logo">Stipica Viskovic</h1>
             </div>
 
             <nav class="main-navigation page-header__item">
@@ -52,10 +55,11 @@
         </header>
 
         <section>
-            <h1>Work</h1>
+            <h1 class="section-title">Work</h1>
             <div class="project-list">
                 <div class="project-list__item">
                     <h2>Mobile web app</h2>
+                    <img src="" alt="" />
                     <p>
                         Within this project, I was responsible for the frontend.
                         It’s written in React.js. Additionally, I've created the
