--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
 
     <body>
         <header class="page-header">
+            <!-- <a href="index.html" class="page-header__item">
+            <img src="./img/logo.png" width="200" height="150" alt="logo icon"  >
+        </a> -->
             <div class="page-header__item">
-                <h2>Stipica Viskovic</h2>
+                <h2 class="page-header__logo">Stipica Viskovic</h1>
             </div>
 
             <nav class="main-navigation page-header__item">
@@ -51,21 +54,19 @@
             </nav>
         </header>
 
-        <main>
-            <div class="profile">
-                <img
-                    src="img/profil.png"
-                    class="profilepic"
-                    alt="profile picture"
-                />
-                <h1>Hello World !</h1>
-                <h2>My name is Stipica Viskovic</h2>
-                <h2>
-                    I am <span class="span__web"> &lt; web &gt;</span> developer
-                    from Essen
-                </h2>
-            </div>
-        </main>
+        <section class="profile">
+            <img
+                src="img/profil.png"
+                class="profilepic"
+                alt="profile picture"
+            />
+            <h1>Hello World !</h1>
+            <h2>My name is Stipica Viskovic</h2>
+            <h2>
+                I am <span class="span__web"> &lt; web &gt;</span> developer
+                from Essen
+            </h2>
+        </section>
 
         <footer class="page-footer">
             <p>Find me on:</p>
