font changed and structure change

--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
         />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap"
-            rel="stylesheet"
-        />
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
 
         <title>Homepage</title>
@@ -29,9 +25,6 @@
 
     <body>
         <header class="page-header">
-            <!-- <a href="index.html" class="page-header__item">
-            <img src="./img/logo.png" width="200" height="150" alt="logo icon"  >
-        </a> -->
             <div class="page-header__item">
                 <h2 class="page-header__logo">Stipica Viskovic</h1>
             </div>
@@ -60,12 +53,12 @@
                 class="profilepic"
                 alt="profile picture"
             />
-            <h1>Hello World !</h1>
-            <h2>My name is Stipica Viskovic</h2>
-            <h2>
+            <h3 class="section-title">Hello World !</h3>
+            <h3>My name is Stipica Viskovic</h3>
+            <h4>
                 I am <span class="span__web"> &lt; web &gt;</span> developer
                 from Essen
-            </h2>
+            </h4>
         </section>
 
         <footer class="page-footer">
