--- a/about.html
+++ b/about.html
@@ -18,10 +18,6 @@
         />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap"
-            rel="stylesheet"
-        />
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
 
         <title>About Me</title>
@@ -29,9 +25,6 @@
 
     <body>
         <header class="page-header">
-            <!-- <a href="index.html" class="page-header__item">
-            <img src="./img/logo.png" width="200" height="150" alt="logo icon"  >
-        </a> -->
             <div class="page-header__item">
                 <h2 class="page-header__logo">Stipica Viskovic</h1>
             </div>
@@ -64,7 +57,7 @@
                 <h3>Running</h3>
             </div>
 
-            <svg
+            <!-- <svg
                 id="about-picture"
                 xmlns="http://www.w3.org/2000/svg"
                 class="berlin-illustration"
@@ -2418,7 +2411,7 @@
                         d="M55.253 470.489L55.253 410.403C55.253 409.85 54.805 409.403 54.253 409.403 53.701 409.403 53.253 409.85 53.253 410.403L53.253 470.489C53.253 471.041 53.701 471.489 54.253 471.489 54.805 471.489 55.253 471.041 55.253 470.489M50.889 340.95L65.312 340.95C65.865 340.95 66.312 340.502 66.312 339.95 66.312 339.397 65.865 338.95 65.312 338.95L50.889 338.95C50.336 338.95 49.889 339.397 49.889 339.95 49.889 340.502 50.336 340.95 50.889 340.95"
                     ></path>
                 </g>
-            </svg>
+            </svg> -->
         </section>
 
         <footer class="page-footer">
