--- a/work.html
+++ b/work.html
@@ -49,26 +49,45 @@
 
         <section>
             <h1 class="section-title">Work</h1>
+            
             <div class="project-list">
                 <div class="project-list__item">
-                    <h2>Mobile web app</h2>
-                    <img src="" alt="" />
-                    <p>
-                        Within this project, I was responsible for the frontend.
-                        It’s written in React.js. Additionally, I've created the
-                        HTML and CSS templates.
-                    </p>
-                    <a href="#">See project on GitHub</a>
+                    <div class="project-list__item__header">
+                        <h3>Cinema datase</h3>
+                        <img class="project-image" src="./img/screenshots/react-movie.png" alt="react-movie" />
+                    </div>
+                    <div class="project-list__item__content">
+                        <p>
+                            With MyFlix, users can easily search and filter 
+                            through a wide range of cinematic masterpieces, view detailed 
+                            information about each film, and even sign up to be able to 
+                            add films to their list of favorites.
+                        </p>
+                        <h5>React, Bootstrap, Parcel</h5>
+
+                        <a href="#">See project on GitHub</a>
+                    </div>
                 </div>
+
+
                 <div class="project-list__item">
-                    <h2>Mobile web app</h2>
-                    <p>
-                        Within this project, I was responsible for the frontend.
-                        It’s written in React.js. Additionally, I've created the
-                        HTML and CSS templates.
-                    </p>
-                    <a href="#">See project on GitHub</a>
+                    <div class="project-list__item__header">
+                        <h3>Cinema datase</h3>
+                        <img class="project-image" src="./img/screenshots/api.png" alt="react-movie" />
+                    </div>
+                    <div class="project-list__item__content">
+                        <p>
+                            The server-side component of a "cinema" web application 
+                            which will allow users to access information about different movies, 
+                            directors, and genres. Users can also create and update their account 
+                            and create a list of their favorite movies.
+                        </p>
+                        <h5>NodeJS, Express, MongoDB, Mongoose</h5>
+
+                        <a href="#">See project on GitHub</a>
+                    </div>
                 </div>
+
                 <div class="project-list__item">
                     <h2>Mobile web app</h2>
                     <p>
