added third project card

--- a/work.html
+++ b/work.html
@@ -72,7 +72,7 @@
 
                 <div class="project-list__item">
                     <div class="project-list__item__header">
-                        <h3>Cinema datase</h3>
+                        <h3>RESTful API</h3>
                         <img class="project-image" src="./img/screenshots/api.png" alt="react-movie" />
                     </div>
                     <div class="project-list__item__content">
@@ -89,13 +89,22 @@
                 </div>
 
                 <div class="project-list__item">
-                    <h2>Mobile web app</h2>
-                    <p>
-                        Within this project, I was responsible for the frontend.
-                        It’s written in React.js. Additionally, I've created the
-                        HTML and CSS templates.
-                    </p>
-                    <a href="#">See project on GitHub</a>
+                    <div class="project-list__item__header">
+                        <h3>Meet app</h3>
+                        <img class="project-image" src="./img/screenshots/meet.png" alt="react-movie" />
+                    </div>
+                    <div class="project-list__item__content">
+                        <p>
+                            Meet App is a serverless, progressive web application (PWA) built 
+                            with React using a test-driven development (TDD). 
+                            The app uses the Google Calendar API to fetch upcoming events. 
+                            It provides users access to different tech events and workshops 
+                            around the world.
+                        </p>
+                        <h5>React, AWS Lambda, Jest, Pupeeteer</h5>
+
+                        <a href="#">See project on GitHub</a>
+                    </div>
                 </div>
                 <div class="project-list__item">
                     <h2>Mobile web app</h2>
