added all projects inside work grid

--- a/work.html
+++ b/work.html
@@ -53,7 +53,7 @@
             <div class="project-list">
                 <div class="project-list__item">
                     <div class="project-list__item__header">
-                        <h3>Cinema datase</h3>
+                        <h3>Cinema Database</h3>
                         <img class="project-image" src="./img/screenshots/react-movie.png" alt="react-movie" />
                     </div>
                     <div class="project-list__item__content">
@@ -107,31 +107,53 @@
                     </div>
                 </div>
                 <div class="project-list__item">
-                    <h2>Mobile web app</h2>
-                    <p>
-                        Within this project, I was responsible for the frontend.
-                        It’s written in React.js. Additionally, I've created the
-                        HTML and CSS templates.
-                    </p>
-                    <a href="#">See project on GitHub</a>
+                    <div class="project-list__item__header">
+                        <h3>ChatBox App</h3>
+                        <img class="project-image" src="./img/screenshots/chatbox.png" alt="react-movie" />
+                    </div>
+                    <div class="project-list__item__content">
+                        <p>
+                            ChatBox is an app for mobile devices 
+                            built using React Native. The app provides users with a 
+                            chat interface and options to share images and their location.
+                        </p>
+                        <h5>React Native, Expo, GiftedChat, Firebase</h5>
+
+                        <a href="#">See project on GitHub</a>
+                    </div>
                 </div>
                 <div class="project-list__item">
-                    <h2>Mobile web app</h2>
-                    <p>
-                        Within this project, I was responsible for the frontend.
-                        It’s written in React.js. Additionally, I've created the
-                        HTML and CSS templates.
-                    </p>
-                    <a href="#">See project on GitHub</a>
+                    <div class="project-list__item__header">
+                        <h3>Pokedex </h3>
+                        <img class="project-image" src="./img/screenshots/pokedex.png" alt="react-movie" />
+                    </div>
+                    <div class="project-list__item__content">
+                        <p>
+                            Small web application built using 
+                            HTML, CSS, and JavaScript. It loads data from an external API 
+                            and allows users to learn about individual Pokemon in detail. 
+                            Main focus was to interact with external API while building something all kids dream to have.
+                        </p>
+                        <h5>HTML, CSS, JavaScript, Bootstrap</h5>
+
+                        <a href="#">See project on GitHub</a>
+                    </div>
                 </div>
                 <div class="project-list__item">
-                    <h2>Mobile web app</h2>
-                    <p>
-                        Within this project, I was responsible for the frontend.
-                        It’s written in React.js. Additionally, I've created the
-                        HTML and CSS templates.
-                    </p>
-                    <a href="#">See project on GitHub</a>
+                    <div class="project-list__item__header">
+                        <h3>Myflix - movies </h3>
+                        <img class="project-image" src="./img/screenshots/myflix.png" alt="react-movie" />
+                    </div>
+                    <div class="project-list__item__content">
+                        <p>
+                            MyFlix is a movide database platform. It is the Angular version of Cinema Database. 
+                            I wanted to keep design simple and clean. I achieved data using Material components and only little CSS.
+                            Documentation for MyFlix was generated using TypeDoc, showcasing the clear and consistent use of comments throughout the project.
+                        </p>
+                        <h5>Angular, TypeScript, CSS</h5>
+
+                        <a href="#">See project on GitHub</a>
+                    </div>
                 </div>
             </div>
         </section>
