--- a/work.html
+++ b/work.html
@@ -65,7 +65,7 @@
                         </p>
                         <h5>React, Bootstrap, Parcel</h5>
 
-                        <a href="#">See project on GitHub</a>
+                        <a href="https://github.com/stivi00/myFlex-client"  target="_blank">See project on GitHub</a>
                     </div>
                 </div>
 
@@ -84,7 +84,7 @@
                         </p>
                         <h5>NodeJS, Express, MongoDB, Mongoose</h5>
 
-                        <a href="#">See project on GitHub</a>
+                        <a href="https://github.com/stivi00/movie_api" target="_blank">See project on GitHub</a>
                     </div>
                 </div>
 
@@ -103,7 +103,7 @@
                         </p>
                         <h5>React, AWS Lambda, Jest, Pupeeteer</h5>
 
-                        <a href="#">See project on GitHub</a>
+                        <a href="https://github.com/stivi00/meet"  target="_blank">See project on GitHub</a>
                     </div>
                 </div>
                 <div class="project-list__item">
@@ -119,7 +119,7 @@
                         </p>
                         <h5>React Native, Expo, GiftedChat, Firebase</h5>
 
-                        <a href="#">See project on GitHub</a>
+                        <a href="https://github.com/stivi00/chat-app"  target="_blank">See project on GitHub</a>
                     </div>
                 </div>
                 <div class="project-list__item">
@@ -136,7 +136,7 @@
                         </p>
                         <h5>HTML, CSS, JavaScript, Bootstrap</h5>
 
-                        <a href="#">See project on GitHub</a>
+                        <a href="https://github.com/stivi00/simple-js-app"  target="_blank">See project on GitHub</a>
                     </div>
                 </div>
                 <div class="project-list__item">
@@ -152,7 +152,7 @@
                         </p>
                         <h5>Angular, TypeScript, CSS</h5>
 
-                        <a href="#">See project on GitHub</a>
+                        <a href="https://github.com/stivi00/myFlix-angular"  target="_blank">See project on GitHub</a>
                     </div>
                 </div>
             </div>
