removed old icons, changed footer

--- a/contact.html
+++ b/contact.html
@@ -91,25 +91,19 @@
         </section>
 
         <footer class="page-footer">
-            <p>Find me on:</p>
             <div class="social-media">
-                <a
-                    href="https://twitter.com"
-                    target="_blank"
-                    class="fa fa-twitter"
-                    aria-label="twitter"
-                ></a>
                 <a
                     href="https://github.com/stivi00"
                     target="_blank"
                     class="fa fa-github"
                     aria-label="github"
+                    style="color: #fff;"
                 ></a>
                 <a
                     href="https://linkedin.com"
                     target="_blank"
                     class="fa fa-linkedin"
-                    aria-label="linkedin"
+                    style="color: #fff;"
                 ></a>
             </div>
         </footer>
