--- a/work.html
+++ b/work.html
@@ -65,7 +65,7 @@
                         </p>
                         <h5>React, Bootstrap, Parcel</h5>
 
-                        <a href="https://github.com/stivi00/myFlex-client"  target="_blank">See project on GitHub</a>
+                        <a href="https://github.com/stivi00/myFlex-client"  target="_blank" class="github-link">See project on GitHub</a>
                     </div>
                 </div>
 
@@ -84,7 +84,7 @@
                         </p>
                         <h5>NodeJS, Express, MongoDB, Mongoose</h5>
 
-                        <a href="https://github.com/stivi00/movie_api" target="_blank">See project on GitHub</a>
+                        <a href="https://github.com/stivi00/movie_api" target="_blank" class="github-link">See project on GitHub</a>
                     </div>
                 </div>
 
@@ -103,7 +103,7 @@
                         </p>
                         <h5>React, AWS Lambda, Jest, Pupeeteer</h5>
 
-                        <a href="https://github.com/stivi00/meet"  target="_blank">See project on GitHub</a>
+                        <a href="https://github.com/stivi00/meet"  target="_blank" class="github-link">See project on GitHub</a>
                     </div>
                 </div>
                 <div class="project-list__item">
@@ -119,7 +119,7 @@
                         </p>
                         <h5>React Native, Expo, GiftedChat, Firebase</h5>
 
-                        <a href="https://github.com/stivi00/chat-app"  target="_blank">See project on GitHub</a>
+                        <a href="https://github.com/stivi00/chat-app"  target="_blank" class="github-link">See project on GitHub</a>
                     </div>
                 </div>
                 <div class="project-list__item">
@@ -136,7 +136,7 @@
                         </p>
                         <h5>HTML, CSS, JavaScript, Bootstrap</h5>
 
-                        <a href="https://github.com/stivi00/simple-js-app"  target="_blank">See project on GitHub</a>
+                        <a href="https://github.com/stivi00/simple-js-app"  target="_blank" class="github-link">See project on GitHub</a>
                     </div>
                 </div>
                 <div class="project-list__item">
@@ -146,38 +146,32 @@
                     </div>
                     <div class="project-list__item__content">
                         <p>
-                            MyFlix is a movide database platform. It is the Angular version of Cinema Database. 
+                            MyFlix is the Angular version of Cinema Database. 
                             I wanted to keep design simple and clean. I achieved data using Material components and only little CSS.
                             Documentation for MyFlix was generated using TypeDoc, showcasing the clear and consistent use of comments throughout the project.
                         </p>
                         <h5>Angular, TypeScript, CSS</h5>
 
-                        <a href="https://github.com/stivi00/myFlix-angular"  target="_blank">See project on GitHub</a>
+                        <a href="https://github.com/stivi00/myFlix-angular"  target="_blank" class="github-link">See project on GitHub</a>
                     </div>
                 </div>
             </div>
         </section>
 
         <footer class="page-footer">
-            <p>Find me on:</p>
             <div class="social-media">
-                <a
-                    href="https://twitter.com"
-                    target="_blank"
-                    class="fa fa-twitter"
-                    aria-label="twitter"
-                ></a>
                 <a
                     href="https://github.com/stivi00"
                     target="_blank"
                     class="fa fa-github"
                     aria-label="github"
+                    style="color: #fff;"
                 ></a>
                 <a
                     href="https://linkedin.com"
                     target="_blank"
                     class="fa fa-linkedin"
-                    aria-label="linkedin"
+                    style="color: #fff;"
                 ></a>
             </div>
         </footer>
